refactor(actionbar): 优化动作条样式和功能实现
重构动作条组件样式，统一使用双引号导入sass文件
调整按钮组布局和样式，增加最大宽度限制
完善垂直模式下的菜单项间距和边框样式
更新类型定义，增加包装宽度配置选项
修改示例代码结构，默认导出示例集合

--- a/src/lib/action/actionbar/style/bar-item-con.scss
+++ b/src/lib/action/actionbar/style/bar-item-con.scss
@@ -1,4 +1,4 @@
-@use '@site0/tijs/sass/_all.scss' as *;
+@use "@site0/tijs/sass/_all.scss" as *;
 
 .bar-item-con {
   position: fixed;
@@ -11,10 +11,9 @@
   //transition: opacity 0.3s;
   background-color: var(--ti-color-menu);
   color: var(--ti-color-menu-f);
-  min-width: 10em;
-  box-shadow:
-    -1px -1px var(--ti-color-light),
-    1px 1px var(--ti-color-dark),
+  min-width: var(--min-wrapper-width);
+  max-width: var(--max-wrapper-width);
+  box-shadow: -1px -1px var(--ti-color-light), 1px 1px var(--ti-color-dark),
     6px 6px 15px var(--ti-color-mask-thin);
   border-radius: var(--ti-measure-r-s);
   z-index: $z-menu + 1;
