--- a/src/lib/shelf/block/ti-block.scss
+++ b/src/lib/shelf/block/ti-block.scss
@@ -1,4 +1,4 @@
-@use '@site0/tijs/sass/_all.scss' as *;
+@use "@site0/tijs/sass/_all.scss" as *;
 
 .ti-block {
   display: grid;
@@ -21,7 +21,7 @@
       text-overflow: ellipsis;
     }
     > .ti-actionbar {
-      padding: SZ(4);
+      flex: 0 0 auto;
     }
   } // > header
   //-----------------------------------------------------------
@@ -57,7 +57,7 @@
 }
 
 //-------------------------------------------------------------
-@mixin __color_by_name($name, $r: 'r') {
+@mixin __color_by_name($name, $r: "r") {
   &.is-#{$name} {
     > header {
       color: var(--ti-color-#{$name}-#{$r});
@@ -65,7 +65,7 @@
 
       // 标题菜单组，顶级项目反色
       > .ti-actionbar > .bar-top-group {
-        > .bar-item[item-depth='0'] > .bar-item-head {
+        > .bar-item[item-depth="0"] > .bar-item-head {
           color: inherit;
           background-color: inherit;
           transition: background-color 0.5s, color 0.3s;
