Update label and table SCSS styles
Commented out background and text color in ti-label.scss and removed unused CSS variables from ti-table.scss to clean up and simplify the styles.

--- a/src/lib/tile/label/ti-label.scss
+++ b/src/lib/tile/label/ti-label.scss
@@ -8,8 +8,7 @@
   //min-height: var(--ti-measure-box-height);
   font-size: var(--box-fontsz);
   border-radius: var(--box-radius);
-  background-color: var(--box-color-bg);
-  color: var(--box-color-text);
+  //background-color: var(--box-color-bg);
   border-color: var(--box-color-border);
   &.can-click {
     cursor: pointer;
