feat(input): 允许列表组件选择项并优化深拷贝方法
- 在多个列表组件中启用 :can-select="true" 以允许选择项
- 使用 lodash.cloneDeep 替换自定义 jsonClone 实现
- 优化 transfer 组件值集合的计算方式
- 调整 multi-droplist 的 padding 样式
- 清理 transfer 示例中多余的选项
- 更新版本号至 1.7.6

--- a/src/lib/input/multi-droplist/ti-multi-droplist.scss
+++ b/src/lib/input/multi-droplist/ti-multi-droplist.scss
@@ -3,7 +3,7 @@
 .ti-multi-droplist {
   --box-color-border: var(--ti-color-border-thin);
   --box-color-border-focus: var(--ti-color-primary);
-  --box-padding: var(--ti-gap-s);
+  --box-padding: 0;
   //-----------------------------------------------------
   > .part-main {
     display: block;
