feat: 更新版本至1.8.8并优化字体配置
- 将字体配置移至CSS变量以便统一管理
- 移除异步组件加载方式，直接导入组件
- 调整TiForm组件以继承属性

--- a/src/assets/style/_mixins.scss
+++ b/src/assets/style/_mixins.scss
@@ -1,7 +1,6 @@
 //-------------------------- font
-$f_fixed: Monaco, Consolas, Courier New;
-$f_nice: 'Microsoft YaHei', 'PingHei', 'Helvetica Neue', 'Helvetica', 'Arial',
-  'Verdana', 'sans-serif';
+$f_fixed: vary(--ti-font-fixed);
+$f_nice: vary(--ti-font-nice);
 //-------------------------- zIndex
 $z-above: 1;
 $z-cover: 10;
