--- a/src/assets/style/measure/comfy.scss
+++ b/src/assets/style/measure/comfy.scss
@@ -41,4 +41,8 @@
   --ti-fontsz-m: 14px; // middle
   --ti-fontsz-b: 16px; // big
   --ti-fontsz-h: 20px; // hug
+
+  --ti-font-fixed: Monaco, Consolas, Courier New;
+  --ti-font-nice: Microsoft YaHei, PingHei, Helvetica Neue, Helvetica, Arial,
+    Verdana, sans-serif;
 }
