feat(input-box): 添加图标点击事件支持并优化样式
- 新增前缀和后缀图标的点击事件处理
- 优化图标宽度计算使用最小高度或1.8em
- 添加视口尺寸监听功能
- 修复样式文件中引号格式和flex间距问题
- 扩展InputBoxEmitter类型支持图标点击事件

--- a/src/lib/input/box2/ti-input-box.scss
+++ b/src/lib/input/box2/ti-input-box.scss
@@ -1,4 +1,4 @@
-@use '@site0/tijs/sass/_all.scss' as *;
+@use "@site0/tijs/sass/_all.scss" as *;
 
 .ti-input {
   --box-color-border: var(--ti-color-border-dark);
@@ -17,7 +17,7 @@
   //-----------------------------------------------------
   > .part-main {
     @include flex-align-nowrap($ai: stretch);
-    flex:1 1 auto;
+    flex: 1 1 auto;
     //---------------------------------------------------
     > .box-part {
       flex: 1 1 auto;
@@ -86,7 +86,7 @@
     //---------------------------------------------------
     > .icon-part {
       flex: 0 0 auto;
-      width: calc(var(--box-fontsz) * 1.8);
+      width: min(var(--box-h), 1.8em);
       position: relative;
       i {
         @include flex-center;
