--- a/src/lib/edit/rich/prose/ti-edit-rich-prose.scss
+++ b/src/lib/edit/rich/prose/ti-edit-rich-prose.scss
@@ -8,6 +8,7 @@
     "menu menu menu"
     "nav main props"
     "foot foot foot";
+  position: relative;
   //-----------------------------------------------------
   > header {
     grid-area: menu;
