--- a/src/lib/edit/filter-bar/ti-filter-bar.scss
+++ b/src/lib/edit/filter-bar/ti-filter-bar.scss
@@ -1,3 +1,12 @@
+@use "@site0/tijs/sass/_all.scss" as *;
+
 .ti-filter-bar {
-  // 这里放置控件的样式
+  @include flex-align;
+  //-----------------------------------------------------
+  > .part-body {
+    flex: 1 1 auto;
+  }
+  //-----------------------------------------------------
+  
+  //-----------------------------------------------------
 }
