fix(input): 调整数字输入框单位宽度和样式
修复数字输入框单位宽度不足的问题，将默认宽度从3em调整为4em
优化输入框列表项的布局样式，使用flex布局并添加间距
添加新的VpT格式选项用于提示文本显示
修复选项数据获取时的空值判断问题

--- a/src/lib/input/box2/ti-input-box.scss
+++ b/src/lib/input/box2/ti-input-box.scss
@@ -144,6 +144,8 @@
       overflow: auto;
       .ti-list {
         .list-item > .list-part.as-text {
+          @include flex-align-nowrap;
+          gap: 0.5em;
           em {
             font-style: normal;
           }
@@ -160,13 +162,9 @@
               min-width: 4em;
             }
           }
-          code + em,
-          code + abbr {
-            margin-left: 0.5em;
-          }
-          em + code,
-          em + abbr {
-            margin-left: 0.5em;
+          code + code {
+            color: var(--ti-color-secondary);
+            font-size: 0.8em;
           }
         }
       }
