--- a/src/lib/view/wall/ti-wall.scss
+++ b/src/lib/view/wall/ti-wall.scss
@@ -1,16 +1,17 @@
-@use '@site0/tijs/sass/_all.scss' as *;
+@use "@site0/tijs/sass/_all.scss" as *;
 
 .ti-wall {
   width: 100%;
   height: 100%;
   overflow: auto;
+  --wit-gap: var(--ti-gap-s);
   //-----------------------------------------------------
   &.can-select,
   &.can-check {
     user-select: none;
   }
   //-----------------------------------------------------
-  > .wall-con {
+  &[data-mode="wall"] > .wall-con {
     display: grid;
     grid-auto-columns: 1fr;
     grid-auto-rows: auto;
@@ -22,7 +23,7 @@
         height: 100%;
         border: 1px dotted transparent;
         border-radius: var(--ti-measure-r-s);
-        padding:0.5em 0;
+        padding: 0.5em 0;
       }
       //-------------------------------------------------
       &.is-current > .wall-item-con {
@@ -36,6 +37,11 @@
       //-------------------------------------------------
     }
     //---------------------------------------------------
+  }
+  //-----------------------------------------------------
+  &[data-mode="list"] > .wall-con {
+    @include flex-align-v-nowrap;
+    gap: var(--wit-gap);
   }
   //-----------------------------------------------------
 }
