--- a/src/lib/action/actionbar/style/bar.scss
+++ b/src/lib/action/actionbar/style/bar.scss
@@ -7,7 +7,8 @@
   --item-color: var(--ti-color-border-shallow);
   --item-line-height: 2.4em;
   --item-icon-width: 2em;
-  --item-icon-height: 2em;
+  --item-icon-height: 2.2em;
+  --item-icon-fontsz: 1em;
   // --ti-fontsz-t: 8px; // tiny
   // --ti-fontsz-s: 10px; // small
   // --ti-fontsz-m: 12px; // middle
