--- a/src/lib/view/wall/ti-wall.scss
+++ b/src/lib/view/wall/ti-wall.scss
@@ -4,7 +4,13 @@
   width: 100%;
   height: 100%;
   overflow: auto;
-  --wit-gap: var(--ti-gap-s);
+  &[data-mode="wall"] {
+    --wall-item-gap: var(--ti-gap-m);
+    padding: 1em;
+  }
+  &[data-mode="list"] {
+    --wall-item-gap: 2px;
+  }
   //-----------------------------------------------------
   &.can-select,
   &.can-check {
@@ -15,6 +21,7 @@
     display: grid;
     grid-auto-columns: 1fr;
     grid-auto-rows: auto;
+    gap: var(--wall-item-gap);
     //---------------------------------------------------
     > .wall-item {
       //-------------------------------------------------
@@ -41,7 +48,7 @@
   //-----------------------------------------------------
   &[data-mode="list"] > .wall-con {
     @include flex-align-v-nowrap;
-    gap: var(--wit-gap);
+    gap: var(--wall-item-gap);
   }
   //-----------------------------------------------------
 }
