--- a/src/lib/view/table/style/table-cell.scss
+++ b/src/lib/view/table/style/table-cell.scss
@@ -1,6 +1,6 @@
 @use "../../../../assets/style/_all.scss" as *;
 
-.ti-table > main > .table-cell {
+.ti-table > .table-part.as-body > main > .table-cell {
   display: grid;
   background-color: var(--ti-color-card);
   //background-color: blue;
