--- a/src/lib/view/table/style/ti-table.scss
+++ b/src/lib/view/table/style/ti-table.scss
@@ -1,21 +1,28 @@
 @use "../../../../assets/style/_all.scss" as *;
 
 .ti-table {
-  > main {
+  @include flex-align-v-nowrap;
+  > * {
+    flex: 0 0 auto;
+  }
+  > .table-part.as-body {
+    flex: 1 1 auto;
+    overflow: hidden;
     position: relative;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    user-select: none;
-    display: grid;
-    grid-template-rows: auto;
-    align-items: stretch;
-    align-content: flex-start;
-    background-color: var(--ti-color-border-thin);
+    > main {
+      position: absolute;
+      inset: 0;
+      overflow: auto;
+      user-select: none;
+      display: grid;
+      grid-template-rows: auto;
+      align-items: stretch;
+      align-content: flex-start;
+      background-color: var(--ti-color-border-thin);
 
-    > .virtual-row {
-      background-color: var(--ti-color-card);
-    }
-  } // ~ main
+      > .virtual-row {
+        background-color: var(--ti-color-card);
+      }
+    } // ~ main
+  }
 }
-
