--- a/src/assets/style/color/light.scss
+++ b/src/assets/style/color/light.scss
@@ -64,4 +64,7 @@
   --ti-color-tip: #222;
   --ti-color-tip-b: #333;
   --ti-color-tip-r: #ddd;
+  --ti-color-star: rgb(231, 231, 24);
+  --ti-color-star-b: #ee0;
+  --ti-color-star-r: #552;
 }
